# schedulr

./: .editorconfig  .gitignore  tasks.md
backend/: pyproject.toml
backend/config/: settings.py  urls.py
backend/users/: admin.py  models.py  permissions.py  serializers.py  signals.py  urls.py  views.py
backend/users/management/commands/: create_dummy_data.py
backend/users/migrations/: 0001_initial.py  0002_deleteduseremail_alter_user_email_and_more.py
backend/users/tests/: test_auth.py  test_signup.py
frontend/: package-lock.json  package.json
frontend/app/: page.tsx
