[project]
name = "schedulr"
version = "0.1.0"
description = "A high-performance scheduling and client booking platform built with Django REST Framework and Next.js."
requires-python = ">=3.12"
dependencies = [
    "django>=6.0.7",
    "django-cors-headers>=4.9.0",
    "djangorestframework>=3.17.1",
    "djangorestframework-simplejwt>=5.5.1",
    "environs>=15.0.1",
    "pillow>=12.3.0",
    "psycopg2-binary>=2.9.12",
]

[dependency-groups]
dev = [
    "black>=26.5.1",
    "django-extensions>=4.1",
    "faker>=40.35.0",
]
